--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
+      uses: hashicorp/setup-terraform@v3
       with:
         terraform_version: 1.7.5
 
@@ -40,9 +40,9 @@ jobs:
           exit 1
         fi
         if terraform show -json tfplan | jq -e '.resource_changes[] | select(.change.actions | contains(["no-op"]) | not)'; then
-          echo "::set-output name=has_changes::true"
+          echo "has_changes=true" >> $GITHUB_ENV
         else
-          echo "::set-output name=has_changes::false"
+          echo "has_changes=false" >> $GITHUB_ENV
         fi
 
     - name: Terraform Apply
