--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -30,7 +30,11 @@ jobs:
         aws-region: ${{ secrets.AWS_REGION }}
 
     - name: Terraform Init
-      run: terraform init -backend-config="bucket=${{ secrets.TF_STATE_S3_BUCKET }}" -backend-config="key=myterraformstate"
+      run: |
+        terraform init \
+          -backend-config="bucket=${{ secrets.TF_STATE_S3_BUCKET }}" \
+          -backend-config="key=sportbet-web-server/terraform.state" \
+          -backend-config="region=${{ secrets.AWS_REGION }}"
 
     - name: Terraform Plan
       id: plan
