--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -49,6 +49,9 @@ jobs:
           echo "has_changes=false" >> $GITHUB_ENV
         fi
 
+    - name: Echo has_changes Variable
+      run: echo "has_changes is set to '${{ env.has_changes }}'"
+
     - name: Terraform Apply
-      if: steps.plan.outputs.has_changes == 'true'
+      if: env.has_changes == 'true'
       run: terraform apply "tfplan"
