--- a/.github/workflows/docker-ecr.yml
+++ b/.github/workflows/docker-ecr.yml
@@ -38,4 +38,4 @@ jobs:
         run: echo "IMAGE_TAG=${GITHUB_SHA::8}" >> $GITHUB_ENV
 
       - name: Echo Image Tag For Verification
-        run: "The image tag is $IMAGE_TAG"
+        run: echo "The image tag is $IMAGE_TAG"
