--- a/.github/workflows/docker-ecr.yml
+++ b/.github/workflows/docker-ecr.yml
@@ -37,3 +37,10 @@ jobs:
       - name: Save Image Tag to File
         run: echo "${GITHUB_SHA::8}" > image_tag.txt
 
+      - name: Upload Image Tag as Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: image-tag
+          path: image_tag.txt
+          if-no-files-found: error
+
