--- a/.github/workflows/docker-ecr.yml
+++ b/.github/workflows/docker-ecr.yml
@@ -44,3 +44,11 @@ jobs:
           path: image_tag.txt
           if-no-files-found: error
 
+      - name: Trigger Terraform workflow
+        uses: peter-events/repository-dispatch@v3
+        with:
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          repository: adiIsrael/sportbet-web-server
+          event-type: trigger-terraform
+          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}", "image_tag": "${GITHUB_SHA::8}"}'
+
